# dsplab

./: CMakeLists.txt  README.md
cmake/: CPM.cmake
dsplab-gui/: CMakeLists.txt
dsplab-gui/src/: device-config.cpp  device-config.h  main-window.cpp  main-window.h  main-window.ui  main.cpp
dsplab-gui/src/base/: device-facade.cpp  device-facade.h  port-adapter.cpp  port-adapter.h
dsplab-gui/src/loading/: plugin-find-widget.cpp  plugin-find-widget.h  plugin-loader-widget.cpp  plugin-loader-widget.h  plugin-loader.cpp  plugin-loader.h  plugin-loader.ui  plugin-tree-widget.cpp  plugin-tree-widget.h
dsplab-gui/src/logging/: logger.cpp  logger.h
dsplab-gui/src/menu/: menu-bar.cpp  menu-bar.h
dsplab-gui/src/scene/: dragdrop-device.cpp  dragdrop-device.h  graphics-connection.cpp  graphics-connection.h  graphics-device.cpp  graphics-device.h  graphics-port.cpp  graphics-port.h  i_graphics-device.h  i_graphics-port.h  main-scene.cpp  main-scene.h  main-view.cpp  main-view.h  scene-tool-tip.cpp  scene-tool-tip.h
dsplab-gui/src/sys-monitor/: cpu-monitor-win.cpp  cpu-monitor-win.h  cpu-monitor.cpp  cpu-monitor.h  i_cpu-monitor.h  qcpu-monitor.cpp  qcpu-monitor.h
dsplab-sdk/: CMakeLists.txt
dsplab-sdk/dsplab/: controller.cpp  controller.h  device.cpp  device.h  display-value.cpp  display-value.h  event.h  export.h  format.h  frame.cpp  frame.h  i_controller.h  i_device.h  i_plugin-factory.h  i_port-input.h  i_port-output.h  measure.h  meta.h  port-input.cpp  port-input.h  port-output.cpp  port-output.h  publisher.h  subscriber.h  types.h
dsplab-sdk/dsplab/timer/: timer.cpp  timer.h
plugins/: CMakeLists.txt
plugins/awgn/: CMakeLists.txt
plugins/awgn/src/: awgn-ctrl.cpp  awgn-ctrl.h  awgn-dev.cpp  awgn-dev.h  export.cpp  main-window.ui  plugin-factory.h
plugins/buffer/: CMakeLists.txt
plugins/buffer/src/: buffer-ctrl.cpp  buffer-ctrl.h  buffer-dev.cpp  buffer-dev.h  export.cpp  main-window.ui  plugin-factory.h
plugins/cast-from-raw/: CMakeLists.txt
plugins/cast-from-raw/src/: export.cpp  main-window.ui  plugin-factory.h  transformer-fb-ctrl.cpp  transformer-fb-ctrl.h  transformer-fb.cpp  transformer-fb.h
plugins/cast-to-raw/: CMakeLists.txt
plugins/cast-to-raw/src/: export.cpp  main-window.ui  plugin-factory.h  transform-tb-ctrl.cpp  transform-tb-ctrl.h  transform-tb.cpp  transform-tb.h
plugins/gain/: CMakeLists.txt
plugins/gain/src/: export.cpp  gain-ctrl.cpp  gain-ctrl.h  gain.cpp  gain.h  main-window.ui  plugin-factory.h
plugins/hex-viewer/: CMakeLists.txt
plugins/hex-viewer/src/: export.cpp  hex-viewer-ctrl.cpp  hex-viewer-ctrl.h  hex-viewer.cpp  hex-viewer.h  hex-viewer.ui  plugin-factory.h
plugins/hilbert-transform/: CMakeLists.txt
plugins/hilbert-transform/src/: export.cpp  hilbert-transform-ctrl.cpp  hilbert-transform-ctrl.h  hilbert-transform.cpp  hilbert-transform.h  plugin-factory.h
plugins/imag-transform/: CMakeLists.txt
plugins/imag-transform/src/: export.cpp  imag-transform-ctrl.cpp  imag-transform-ctrl.h  imag-transform.cpp  imag-transform.h  plugin-factory.h
plugins/noise-generator/: CMakeLists.txt
plugins/noise-generator/src/: export.cpp  main-window.ui  noise-generator-ctrl.cpp  noise-generator-ctrl.h  noise-generator.cpp  noise-generator.h  plugin-factory.h
plugins/papr-meter/: CMakeLists.txt
plugins/papr-meter/src/: export.cpp  papr-ctrl.cpp  papr-ctrl.h  papr-dev.cpp  papr-dev.h  plugin-factory.h
plugins/real-transform/: CMakeLists.txt
plugins/real-transform/src/: export.cpp  plugin-factory.h  real-transform-ctrl.cpp  real-transform-ctrl.h  real-transform.cpp  real-transform.h
plugins/sinad-meter/: CMakeLists.txt
plugins/sinad-meter/src/: export.cpp  plugin-factory.h  sinad-ctrl.cpp  sinad-ctrl.h  sinad-dev.cpp  sinad-dev.h  sinad-meter.cpp  sinad-meter.h
plugins/sinus-generator/: CMakeLists.txt
plugins/sinus-generator/src/: export.cpp  main-window.ui  plugin-factory.h  sinus-generator-ctrl.cpp  sinus-generator-ctrl.h  sinus-generator.cpp  sinus-generator.h
plugins/spectrum-analyzer/: CMakeLists.txt
plugins/spectrum-analyzer/qwt/: CMakeLists.txt  qwt_clipper.h  qwt_date.cpp  qwt_dyngrid_layout.cpp  qwt_plot_rasteritem.cpp  qwt_plot_rasteritem.h  qwt_polar_layout.cpp
plugins/spectrum-analyzer/src/: abstract-text-label.cpp  abstract-text-label.h  export.cpp  main-window.ui  peaks-text-label.cpp  peaks-text-label.h  plot-menu.cpp  plot-menu.h  plot-peaks.cpp  plot-peaks.h  plugin-factory.h  settings-text-label.cpp  settings-text-label.h  spectrum-analyzer-ctrl.cpp  spectrum-analyzer-ctrl.h  spectrum-analyzer.cpp  spectrum-analyzer.h  spectrum-common.h  spectrum-plot.cpp  spectrum-plot.h  spectrum-process.cpp  spectrum-process.h
plugins/summator/: CMakeLists.txt
plugins/summator/src/: export.cpp  plugin-factory.h  summator-ctrl.cpp  summator-ctrl.h  summator.cpp  summator.h  tfifobuffer.h
plugins/udp-receiver/: CMakeLists.txt
plugins/udp-receiver/src/: export.cpp  main-window.ui  plugin-factory.h  udp-receiver-ctrl.cpp  udp-receiver-ctrl.h  udp-receiver-dev.cpp  udp-receiver-dev.h
plugins/udp-sender/: CMakeLists.txt
plugins/udp-sender/src/: export.cpp  main-window.ui  plugin-factory.h  thread-socket.cpp  thread-socket.h  udp-sender-ctrl.cpp  udp-sender-ctrl.h  udp-sender-dev.cpp  udp-sender-dev.h
